--- a/dxtn/Makefile
+++ b/dxtn/Makefile
@@ -37,11 +37,10 @@ endif
 
 ifneq (,$(findstring Darwin,$(UNAME)))
 	SDK	:=	/Developer/SDKs/MacOSX10.4u.sdk
-	OSXCFLAGS	:= -O -mmacosx-version-min=10.4 -isysroot $(SDK) -arch i386 -arch ppc
+	OSXCFLAGS	:= -mmacosx-version-min=10.4 -isysroot $(SDK) -arch i386 -arch ppc
 	OSXCXXFLAGS	:=	$(OSXCFLAGS)
 	CXXFLAGS	+=	-fvisibility=hidden
-	export MACOSX_DEPLOYMENT_TARGET	:=	10.4
-	LDFLAGS += -arch i386 -arch ppc -Wl,-syslibroot,$(SDK)
+	LDFLAGS += -mmacosx-version-min=10.4 -arch i386 -arch ppc -Wl,-syslibroot,$(SDK)
 endif
 
 ifneq (,$(findstring Linux,$(UNAME)))
@@ -49,13 +48,6 @@ ifneq (,$(findstring Linux,$(UNAME)))
 	OS := Linux
 endif
 UNAME	:=	$(shell uname -s)
-
-ifneq (,$(findstring Darwin,$(UNAME)))
-	SDK	:=	/Developer/SDKs/MacOSX10.4u.sdk
-	CFLAGS	+= -mmacosx-version-min=10.4 -isysroot $(SDK) -fvisibility=hidden
-	export MACOSX_DEPLOYMENT_TARGET	:=	10.4
-	ARCH	:= -arch i386 -arch ppc
-endif
 
 
 #---------------------------------------------------------------------------------
