--- a/configure.ac
+++ b/configure.ac
@@ -14,7 +14,7 @@ AC_PROG_INSTALL
 AC_CANONICAL_HOST
 AC_CANONICAL_BUILD
 AC_PROG_LIBTOOL
-
+AM_PROG_CC_C_O
 #
 # check for libfreeimage
 #
@@ -24,12 +24,23 @@ case "${host}" in
 	;;
 esac
 
-AC_CHECK_HEADER([FreeImage.h],
-    [AC_CHECK_LIB([freeimage], [FreeImage_OpenMemory],
-        [FREEIMAGE_LIBS="-lfreeimage ${WIN_FREEIMAGE_LIBS} -lstdc++"], [FREEIMAGE_LIBS=], [${WIN_FREEIMAGE_LIBS} -lstdc++])],
-    [FREEIMAGE_LIBS=])
-AS_IF([test -z "$FREEIMAGE_LIBS"],
-    [AC_MSG_ERROR(['libfreeimage' not found])])
+AC_CHECK_HEADER([FreeImage.h])
+
+AC_MSG_CHECKING([for libfreeimage])
+save_LIBS="$LIBS"
+LIBS="$LIBS -lfreeimage ${WIN_FREEIMAGE_LIBS} -lstdc++"
+AC_LINK_IFELSE(
+	[AC_LANG_PROGRAM([[#include <FreeImage.h>]],
+	[[FreeImage_DeInitialise()]])],
+	[freeimage_result=yes],
+	[freeimage_result=no])
+AC_MSG_RESULT([$freeimage_result])
+LIBS="$save_LIBS"
+if test "x$freeimage_result" = "xyes"; then
+	FREEIMAGE_LIBS="-lfreeimage ${WIN_FREEIMAGE_LIBS} -lstdc++"
+else
+	 AC_MSG_ERROR(['libfreeimage' not found])
+fi
 AC_SUBST([FREEIMAGE_LIBS], [${FREEIMAGE_LIBS}])
 
 AC_CONFIG_FILES([Makefile])
