.gitignore: Ignore more files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,27 @@
+*.exe
+*.la
+*.lo
+*.o
+.deps
+.libs
 COPYING
 INSTALL
+Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
 compile
 config.guess
+config.log
+config.status
 config.sub
 configure
 depcomp
+elf2dol
+gcdsptool
+gxtexconv
 install-sh
+libtool
 ltmain.sh
-missing
 m4
+missing
