--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT([gamecube-tools],[1.0.4],[https://github.com/devkitPro/gamecube-tools/issues])
+AC_INIT([gamecube-tools],[1.0.6],[https://github.com/devkitPro/gamecube-tools/issues])
 AC_CONFIG_SRCDIR([gdtool/gdtool.cpp])
 
 AM_INIT_AUTOMAKE([subdir-objects])
@@ -27,7 +27,7 @@ case "$host" in
 esac
 
 case "$host" in
-   *-apple-darwin*)
+   x86_64-apple-darwin* | aarch64-apple-darwin* )
       STDCPP_LIBS="-lc++"
       ;;
 
